--- a/default.css
+++ b/default.css
@@ -1,7 +1,15 @@
 body{
-    background-color: aliceblue;
+    margin: 0;
+    background-color: black;
 }
-.enterPhobiaButton{
-    height: 30px;
-    width: 150px;
+.bgimage{
+    background-image: url(assets/siteherobg.png);
+    background-position: center;
+    background-size: cover;
+    height: 85vh;
+}
+.bgimage span{
+    font-size: 100px;
+    text-align: center;
+    
 }
