--- a/default.css
+++ b/default.css
@@ -4,7 +4,7 @@ body{
 }
 .bgimage{
     background-image: url(assets/siteherobg.png);
-    background-position: center;
+    background-position: 30% 50%;
     background-size: cover;
     height: 88vh;
     border-bottom: solid 10px magenta;
@@ -13,6 +13,9 @@ body{
     font-size: 100px;
     text-align: center;
     
+}
+.quote{
+    font-family: 'Roboto Slab', serif; 
 }
 .downArrow{
     margin-left: 50%;
@@ -25,4 +28,23 @@ body{
 .description{
     margin-top: 100px;
     font-size: 24px;
+}
+.description h1{
+    font-family: 'Roboto Slab', serif;
+}
+.borderl{
+    margin-left: -20px;
+    padding-left: 20px;
+    border-left: solid 5px orange;
+}
+.github{
+    margin-top: 100px;
+    text-align: center;
+    font-size: 24px;
+    color: lightgray;
+    
+}
+.names{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
